Revision history for Net::Bullfinch

{{$NEXT}}

0.07 Feb 15 2012
   * More iterator fixes.

0.06 Feb 14 2012
   * Fix busted iterator
   * Don't bother with /open and /close

0.05 Feb 8 2012
   * Add expire support for requests

0.04 Feb 7 2012
   * Use Memcached::Client in lieu of Net::Kestrel, as it's likely
     much more reliable.

0.03 Jan 24 2012
   * Add process-by option

0.02 Nov 27 2011
   * Add port as an attr (Stevan Little)

0.01 Oct 5 2011
    * First release
